--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,7 @@ main {
   min-height: 100%;
 }
 
-.dhadow-custom {
+.shadow-custom {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
+
